--- a/ShellExplained/ShellExplained/Views/RecipesGridView.xaml
+++ b/ShellExplained/ShellExplained/Views/RecipesGridView.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShellExplained.Views.RecipesGridView">
     <ContentPage.Content>
-        <CollectionView Style="{StaticResource BaseCarouselView}" ItemsSource="{Binding Recipes}">
+        <CollectionView ItemsSource="{Binding Recipes}" SelectionMode="Single" SelectionChanged="CollectionView_SelectionChanged">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout>
-                        <Image Source="{Binding ImageUrl}"/>
-                        <Label Text="{Binding Title}"/>
+                        <Image Source="{Binding ImageUrl}" WidthRequest="100" HeightRequest="100"/>
+                        <Label Text="{Binding Title}" TextColor="Black" HorizontalTextAlignment="Center"/>
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
