--- a/ShellExplained/ShellExplained/Views/RecipesListView.xaml
+++ b/ShellExplained/ShellExplained/Views/RecipesListView.xaml
@@ -8,7 +8,7 @@
                 <DataTemplate>
                     <StackLayout>
                         <Image Source="{Binding ImageUrl}" WidthRequest="100" HeightRequest="100"/>
-                        <Label Text="{Binding Title}"/>
+                        <Label Text="{Binding Title}" HorizontalTextAlignment="Center"/>
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
